# rust-todo

./: .gitignore  .sample.env  Cargo.toml  README.md  Rocket.toml
migrations/2022-01-27-114722_users/: down.sql  up.sql
migrations/2022-01-27-114722_users/src/: schema.rs
migrations/2022-01-27-124851_posts/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/db/: setup.rs
src/models/: todo_model.rs  user_model.rs
src/routes/: auth_router.rs  mod.rs  todo_router.rs  user_router.rs
