[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4.8", features = ["postgres"]}
axum = {version = "0.4.4"}
tokio = {version = "1.15.0", features = ["full"]}
dotenv = "0.15.0"
serde = { version = "1.0.136", features = ["derive"]}
serde_derive = "1.0.136"
